<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionScreen">

    <Button
        android:id="@+id/buttonskip"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:backgroundTint="@color/MainColor"
        android:onClick="openAppInfo"
        android:text="@string/permissions_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="282dp"
        android:layout_height="110dp"
        android:contentDescription="@string/app_name"
        android:text="@string/permissions_title"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/button"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:backgroundTint="@color/MainColor"
        android:onClick="openBluetoothSettings"
        android:text="@string/bluetooth_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonskip"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:onClick="goToMainScreen"
        android:paddingVertical="12dp"
        android:text="@string/permissions_skip"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="389dp"
        android:layout_height="95dp"
        android:layout_marginTop="24dp"
        android:text="@string/permissions_description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>